# senior_ws

./: .gitmodules  README.md  first_save_map.pgm  first_save_map.yaml  first_serial_map.data  frames_2025-03-18_11.47.03.gv  frames_2025-03-19_11.36.12.gv
firmwares/Arduino_boards/ArduinoMegaCode/ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.ino  servos.h
firmwares/Arduino_boards/ArduinoNanoBLE_IMU/: imu_voltage_temp.ino
firmwares/Arduino_boards/ArduinoUnoCode/ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  encoder_driver.h  encoder_driver.ino  imu_driver.h  imu_driver.ino  servos.h
firmwares/Arduino_boards/ROSArduinoBridge/: ROSArduinoBridge.ino  imu_driver.h  imu_driver.ino  imu_drivers.h  motor_driver.ino  servos.h
firmwares/Arduino_boards/ROSArduinoBridgeBLE/: ROSArduinoBridge.ino  encoder_driver.h  encoder_driver.ino  imu_driver.h  imu_driver.ino  motor_driver.ino
firmwares/Arduino_boards/ROSArduinoBridgeBLE/ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  imu_driver.h  imu_driver.ino  motor_driver.h
firmwares/ESP32_boards/ROSArduinoBridge/: ROSArduinoBridge.ino  motor_driver.h  motor_driver.ino
firmwares/ROSArduinoBridge/: ROSArduinoBridge.ino
install/: local_setup.sh  setup.sh
install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/extender_arduino/share/extender_arduino/: extender_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_publisher/lib/imu_publisher/: imu_publisher
install/imu_publisher/share/imu_publisher/: package.dsv  package.ps1  package.sh  package.xml
install/joy_tester/share/joy_tester/: package.sh  package.xml
install/listener_package/lib/listener_package/: listener  phone_listener  talker
install/listener_package/share/listener_package/: package.dsv  package.ps1  package.sh  package.xml
install/minibot/lib/minibot/: extender_teleop_node.py  gripper_teleop_node.py  imu_publisher_node.py  platform_teleop_node.py  velocity_publisher
install/minibot/share/minibot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_package/share/my_package/: package.sh  package.xml
install/nav2_common/share/nav2_common/: package.sh
log/: latest_build
src/diffdrive_arduino/: README.md
src/diffdrive_arduino/research_src/: doc.text
src/example_3/: CMakeLists.txt  example_3.xml  package.xml
src/example_3/bringup/config/: rrbot_forward_position_publisher.yaml  rrbot_multi_interface_forward_controllers.yaml
src/example_3/bringup/launch/: rrbot_system_multi_interface.launch.py  test_forward_position_controller.launch.py
src/example_3/description/launch/: view_robot.launch.py
src/example_3/description/ros2_control/: rrbot_system_multi_interface.ros2_control.xacro
src/example_3/description/urdf/: rrbot_description.urdf.xacro  rrbot_system_multi_interface.urdf.xacro
src/example_3/hardware/: rrbot_system_multi_interface.cpp
src/example_3/hardware/include/example3/: extender.hpp  rrbot_system_multi_interface.hpp  visibility_control.h
src/example_3/test/: test_rrbot_system_multi_interface_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/extender_arduino/: CMakeLists.txt  README.md  package.xml
src/extender_arduino/bringup/config/: diffbot_controllers.yaml
src/extender_arduino/bringup/launch/: diffbot.launch.py
src/extender_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/extender_arduino/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/extender_arduino/doc/: userdoc.rst
src/extender_arduino/hardware/: diffbot_system.cpp
src/extender_arduino/hardware/include/extender_arduino/: arduino_comms.hpp  diffbot_system.hpp
src/grabber1_arduino/hardware/: rrbot_system_multi_interface.cpp
src/grabber_arduino/: CMakeLists.txt  package.xml
src/grabber_arduino/bringup/config/: grabber_controllers.yaml
src/grabber_arduino/bringup/launch/: grabber.launch.py
src/grabber_arduino/description/urdf/: grabber.urdf.xacro
src/grabber_arduino/hardware/: grabber_system.cpp  rrbot_system_multi_interface.cpp
src/grabber_arduino/hardware/include/grabber_arduino/: arduino_comms.hpp  extender.hpp  grabber.hpp  rrbot_system_multi_interface.hpp  visibility_control.h
src/hard_ware_interface_dev/: README.md
src/minibot/: CMakeLists.txt
src/minibot/config/: controller.yaml  joystick_params.yaml  mapper_params_localization.yaml  minibot_config.rviz  sim_config.rviz
src/minibot/demo_publisher_node/: extender_teleop_node.py  imu_publisher_node.py  linear_data_collector_node.py
src/minibot/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_control.xacro
src/minibot/launch/: camera.launch.py  joystick_teleop.launch.py  keyboard_combine.launch.py  navigation_launch.py  robot.launch.py  sim_control_station.launch.py
src/riley_ws/install/: local_setup.sh  setup.sh
src/riley_ws/log/: latest_build
src/ros_imu_lsm6ds3/: CMakeLists.txt  package.xml
src/ros_imu_lsm6ds3/launch/: ros_imu_lsm6ds3.launch.py
(+261 files in other folders)
